gl51-master/src/test/deca/context/invalid/testObject_rule3_28.deca
//Description
//Assignation incompatible

class A {}
class B {}
{
    A a = new A();
    B b = new B();
    b = a; //error
}
//passed
